2006-06-16  John W. Eaton  <jwe@octave.org>

	* parse.y (%union): New type, anon_fcn_handle_type.
	(anon_fcn_handle): Now anon_fcn_handle_type, not tree_constant_type.
	(make_anon_fcn_handle):	Return tree_anon_fcn_handle, not tree_constant.

	* comment-list.cc (octave_comment_list::dup): New function.
	* comment-list.h: Provide decl.

	* pt-cmd.cc (tree_no_op_command::dup): New function.
	* pt-cmd.h: Provide decl.
	(tree_command::dup): New pure virtual function.

	* pt-loop.cc (tree_while_command::dup, tree_do_until_command::dup,
	tree_simple_for_command::dup, tree_complex_for_command::dup):
	New functions.
	* pt-loop.h: Provide decls.

	* pt-jump.cc (tree_break_command::dup, tree_continue_command::dup,
	tree_return_command::dup): New functions.
	* pt-jump.h: Provide decls.

	* pt-except.cc (tree_try_catch_command::dup,
	tree_unwind_protect_command::dup): New functions.
	* pt-except.h: Provide decls.

	* pt-select.cc (tree_if_clause::dup, tree_if_command_list::dup,
	tree_if_command::dup, tree_switch_case::dup,
	tree_switch_case_list::dup, tree_switch_command::dup):
	New functions.
	* pt-select.h: Provide decls.

	* pt-decl.cc (tree_decl_elt::dup, tree_decl_init_list::dup,
	tree_global_command::dup, tree_static_command::dup): New functions.
	* pt-decl.h: Provide decls.
	
	* pt-exp.h (tree_expression::copy_base): New function.
	(tree_expression::dup): New pure virtual function.
	
	* pt-fcn-handle.cc, pt-fcn-handle.h (tree_anon_fcn_handle): New class.

	* pt-fcn-handle.cc (tree_function_handle::dup): New function.
	* pt-fcn-handle.h: Provide decl.

	* pt-colon.cc (tree_colon_expression::dup): New function.
	* pt-colon.h: Provide decl.
	(tree_colon_expression::tree_colon_expression (tree_expression *,
	tree_expression *, tree_expression *, int, int)): New constructor.
	
	* pt-const.cc (tree_constant::dup): New function.
	(tree_constant::tree_constant (const octave_value&, const
	std::string&, int, int)): New constructor.
	* pt-const.h: Provide decls.
